# mota

./: CMakeLists.txt
EasyX_20240601/lib/VC2008/x64/: EasyXa.lib  EasyXw.lib
EasyX_20240601/lib/VC2008/x86/: EasyXa.lib  EasyXw.lib
EasyX_20240601/lib/VC6/x86/: EasyXa.lib  EasyXw.lib
include/: Block.h  Canvas.h  Game.h  Item.h  Map.h  MapLoader.h  Player.h  allblocks.h  downstair.h  enemy.h  terrain.h  upstair.h
lib/maps/: 0.json
scr/: main.cpp
scr/Block/: Block.cpp
scr/Block/enemy/: enemy.cpp
scr/Block/item/: Item.cpp
scr/Block/terrain/: downstair.cpp  terrain.cpp  upstair.cpp
scr/Canvas/: Canvas.cpp
scr/Game/: Game.cpp
scr/Player/: Player.cpp
scr/map/: Map.cpp  MapLoader.cpp
scr/maps/: 1.json
